2008-07-26  Nicolas François  <nicolas.francois@centraliens.net>

	* src/groupmems.c: Added Prog global variable to indicate the name
	of the program in error messages.

2008-07-22  Lukáš Kuklínek  <lkukline@redhat.com>

	* NEWS, src/groupmems.c: Check if the user added to group actually
	exist. RedHat bug #455603
	* NEWS, src/groupmems.c: Check if the group exists in the group
	local database (/etc/group). RedHat bug #456088

2008-07-22  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/prototypes.h: Fix getrange prototype.

2008-07-21  Seraphim Mellos  <mellos@ceid.upatras.gr>

	* README, NEWS, configure.in, lib/pam_defs.h, src/login.c: Add
	support for OpenPAM.

2008-07-12  Nicolas François  <nicolas.francois@centraliens.net>

	* src/chage.c: Ignore the return value of pam_end() before exiting.
	* src/chage.c: Ignore return values of strftime(), snprintf(),
	puts(), printf(), and fputs().
	* src/chage.c: Check the return value of asctime().

2008-07-12  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/gshadow.c: Avoid assignments in comparison.

2008-07-12  Nicolas François  <nicolas.francois@centraliens.net>

	* ChangeLog, NEWS, src/login.c: Re-inject the changes from 4.1.2.1.

2008-07-11  Nicolas François  <nicolas.francois@centraliens.net>

	* src/usermod.c: Do not call usr_update() if it will have no
	effects. This avoid checking if the user exists in the local passwd
	file if not necessary, and thus allow to add LDAP users to local
	groups. (The user is already checked against the system
	configuration with getpwnam()). Thanks to Dan Kopecek.

2008-07-11  Nicolas François  <nicolas.francois@centraliens.net>

	* src/usermod.c: Split update_files() into update_lastlog() and
	update_faillog(). Report errors (but don't fail) if the file
	exist, but open(), lseek(), read(), write(), or close() fails.
	* src/usermod.c: Add brackets and parenthesis.
	* src/usermod.c: Ignore the return value of pam_end() before
	exiting.